<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#5918FFFF"
    android:id="@+id/clNote">

    <TextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9FFFFFFF"
        android:text="@string/etNoteTitle"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#9FFFFFFF"
        android:maxLines="4"
        android:text="@string/etmNoteText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle" />

    <TextView
        android:id="@+id/tvNoteAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#9FFFFFFF"
        android:text="@string/tvAuthorName"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteText" />

</androidx.constraintlayout.widget.ConstraintLayout>