<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/note_background2"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:background="#4B64FFDA"
        android:ems="10"
        android:textFontWeight="40"
        android:textSize="18sp"
        android:textColor="#000000"
        android:hint="@string/etName"
        android:inputType="textPersonName"
        android:maxLength="35"
        android:minHeight="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnSaveAuthor"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <Button
        android:id="@+id/btnAddNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/btnAddNote"
        app:layout_constraintEnd_toEndOf="@+id/btnSaveAuthor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSaveAuthor"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveAuthor" />

    <Button
        android:id="@+id/btnAllNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAllNotes"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="@+id/btnAddNote"
        app:layout_constraintStart_toStartOf="@+id/btnAddNote"
        app:layout_constraintTop_toBottomOf="@+id/btnAddNote" />

    <ProgressBar
        android:id="@+id/pbDownload"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnAddNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>